# symbaker

./: .gitignore  Cargo.toml  README.md  verify_reference.py
scripts/: dump_nro_exports.py
src/: filter.rs  lib.rs  out.rs
symbaker-build/: Cargo.toml
symbaker-build/src/: lib.rs
tests/: host_prefix_propagation.rs  module_rules.rs  symbaker_exports.rs  symdump_sidecar.rs
tests/dep_lib/: Cargo.toml
tests/fixture_app/: Cargo.toml
tests/fixture_app/src/: lib.rs
tests/host_app/: Cargo.toml
tests/host_app/src/: lib.rs
tests/rules_app/: Cargo.toml
tests/rules_app/src/: lib.rs
tests/workspace_host/: Cargo.toml
tests/workspace_host/dep_lib/: Cargo.toml
tests/workspace_host/dep_lib/src/: lib.rs
tests/workspace_host/host_app/: Cargo.toml
